--- a/front/css/cart.css
+++ b/front/css/cart.css
@@ -18,6 +18,13 @@ h2 {
   cursor: pointer;
   color: blue;
 }
+.supLigne:hover {
+  cursor: pointer;
+  font-weight: bold;
+}
+.supLigne {
+  font-size: 20px;
+}
 
 .bton_nbr {
   display: inline-block;
